[package]
name = "rdenticon"
authors = ["jay3332"]
version = "0.1.0"
edition = "2021"
description = "An implementation of jdenticon in pure Rust."
repository = "https://github.com/jay3332/rdenticon"
readme = "README.md"
license = "MIT"

[dependencies]
sha1_smol = "1"

[dependencies.ril]
git = "https://github.com/jay3332/ril"
branch = "main"
version = "0.9"
default-features = false

[features]
default = ["ril/png"]
